--- a/footer.css
+++ b/footer.css
@@ -57,7 +57,7 @@
 .social-links {
     display: flex;
     gap: 1rem;
-    margin-left: 1.3em;
+   
 }
 
 .social-links a {
